# Zeon_CPO_Tracker

./: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt
.claude/: settings.local.json
api/: benchmark.py  dependencies.py  main.py  middleware.py  pagination.py
api/repositories/: analytics_repository.py  station_repository.py
api/routes/: admin.py  analytics.py  filters.py  geo.py  health.py  search.py  stations.py
api/schemas/: requests.py  responses.py
api/services/: analytics_service.py  geo_service.py  search_service.py  station_service.py
data/checkpoints/: latest_run_id.txt  run_20260521_075852.json  run_20260522_104226.json
data/exports/: stations.csv
data/final/: amenities.csv  amenities.json  chargers.csv  chargers.json  connector_types.csv  connector_types.json  connectors.csv  stations.csv
data/processed/: stations_20260521_130855.json
database/: engine.py  models.py  refresh_views.py
database/migrations/: env.py
etl/: benchmark.py  extract.py  load.py  metrics.py  orchestrator.py  staging.py  transform.py  validators.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/components/: providers.tsx
frontend/hooks/: useAnalytics.ts  useFilters.ts  useFiltersParams.ts  useGeoPoints.ts  useLiveStatus.ts  useNearby.ts  useSearch.ts  useStation.ts  useStations.ts
frontend/lib/: api-client.ts  mock-data.ts  query-client.ts  utils.ts
frontend/services/: analytics.ts  (+3 more)
reports/: api_benchmark_report.json  benchmark_report_20260521_075852.json  etl_metrics_20260521_075852.json  etl_validation_report_20260521_075852.json  extract_report_20260521_075852.json  full_scrape_report_20260521_075852.json
scraper/: __init__.py  config.py
(+6526 files in other folders)
