[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "statiq-scraper"
version = "0.1.0"
description = "EV Charging Station Intelligence — Statiq India scraper"
requires-python = ">=3.11"
dependencies = [
    # HTTP
    "httpx[http2]>=0.27.0",
    "playwright>=1.44.0",
    # Parsing
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    # Data validation & config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "geoalchemy2>=0.15.0",
    # Cache
    "redis[asyncio]>=5.0.0",
    # Resilience
    "tenacity>=8.3.0",
    # Data processing
    "pandas>=2.2.0",
    # Logging & progress
    "loguru>=0.7.2",
    "tqdm>=4.66.0",
    # Utilities
    "aiofiles>=23.2.0",
    "python-slugify>=8.0.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
scrape = "scraper.pipeline:main"
serve  = "api.main:start"

[tool.setuptools.packages.find]
where = ["."]
include = ["scraper*", "database*", "etl*", "api*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that make live network calls (deselect with '-m not integration')",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
